Minor. Fix category label spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -67,6 +67,11 @@ html {
   margin-bottom: 5px;
 }
 
+.global .label.categories {
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
+
 .global .recent-posts-title {
   margin-top: 5px;
   margin-bottom: 5px;
